# reproducible_research_gretsi

./: Dockerfile  README.md  _quarto_internal_scss_error.scss  index.html  index.qmd  index.quarto_ipynb  log_sl.txt  main.py  pyproject.toml
example_demo/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
example_demo/examples/2d_circle_L2_inexact/: src.py
example_demo/examples/2d_circles_L2_exact/: src.py
example_demo/examples/2d_p_norm_q/: src.py
example_demo/examples/2d_p_norm_q_outlier/: src.py
example_demo/examples/2d_proj_W1/: src.py
example_demo/examples/2d_proj_W1_duck_cross_heart/: src.py
example_demo/examples/G_fixed_point_toy/: src.py
example_demo/examples/G_support_study/: free_ratio_results.npy  point_cloud_ratio_results.npy  src.py
example_demo/examples/algo_comparison/: G_multiple_K_n10_d10_params.json  G_multiple_K_n10_d10_results.npy  G_multiple_d_n30_K3_results.npy  G_multiple_n_d10_K3_params.json  G_multiple_n_d10_K3_results.npy  N_multiple_K_n10_d10_results.npy  N_multiple_d_n30_K3_params.json  N_multiple_d_n30_K3_results.npy  N_multiple_n_d10_K3_results.npy  multiple_K_n10_d10_params.json  multiple_K_n10_d10_results.npy  multiple_d_n30_K3_params.json  multiple_d_n30_K3_results.npy  multiple_n_d10_K3_results.npy  src.py
example_demo/examples/algo_comparison/before_cv_change/: N_multiple_K_n10_d10_params.json  N_multiple_K_n10_d10_results.npy  (+8 more)
example_demo/examples/gmm/: src.py
example_demo/examples/outlier_colour_transfer/: app.py  app_full.py  run.py  src.py
example_demo/ot_bar/: __init__.py  solvers.py  utils.py
(+1 files in other folders)
