[project]
name = "25-08-gretsi-reproducible-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pot>=0.9.5",
    "quarto>=0.1.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
