[project]
name = "ot-bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pot>=0.9.5",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"â
